--- a/Resources/Style.css
+++ b/Resources/Style.css
@@ -6,15 +6,15 @@ body{
   background-color: black;
   opacity: 0.9;
   text-align: center;
+  margin: 0;
+}
+
+main{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-/* Take out after layout is done. */
-div{
-  border: 2px dotted white;
-}
 nav a{
   color: seashell;
   text-decoration: underline;
@@ -39,32 +39,25 @@ header{
   background-color: black;
 }
 
-header .logo{
-  display: inline-block;
-}
-
-header nav{
+header .logo, header nav{
   display: inline-block;
 }
 
 nav span{
-  padding-right: 10px;
-  padding-left: 10px;
+  padding: 20px 10px;
+  flex-grow: 1;
 }
 
 /* Hero image content styling */
 .hero{
   display: flex;
-  position: relative;
   justify-content: center;
   align-items: center;
-  top: 70px;
+  padding-top: 70px;
   height: 700px;
   width: 1200px;
   background-image: url("Images/img-mission-background.jpg");
-  background-size: 1200px 700px;
   background-position: center;
-  background-repeat: no-repeat;
 }
 
 .mission{
@@ -78,26 +71,27 @@ nav span{
   flex-flow: column wrap;
   position: relative;
   width: 1000px;
+  margin: 70px 0;
 }
 
 .teas{
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .tea{
   display: flex;
   align-items: flex-end;
   background-image: url("Images/img-mission-background.jpg");
-  background-color: black;
-  height: 200px;
+  background-repeat: no-repeat;
+  height: 235px;
   width: 300px;
   background-size: 300px 200px;
+  margin: 10px;
 }
 
 .tea-name{
-  background-color: black;
   width: 300px;
 }
 
@@ -122,3 +116,45 @@ nav span{
 }
 
 /* Locations Styling */
+.locations{
+  display: flex;
+  flex-flow: row wrap;
+  position: relative;
+  width: 1200px;
+  height: 500px;
+  background-image: url("Images/img-locations-background.jpg");
+  background-position: center;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.locations h2{
+  display: inline-block;
+  width: 1200px;
+  margin: 0 auto;
+}
+
+.location{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  opacity: 1;
+  width: 300px;
+  margin: 15px 20px;
+}
+
+/* Space for contact styling if required in future - currently unneeded*/
+.contact{
+
+}
+
+/*Footer styling */
+footer{
+  display: block;
+  text-align: left;
+  padding-left: 20px;
+  margin: 30px 10px;
+}
